fixed overflow-x bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,4 +10,6 @@ html, body {
 body {
   margin: 0;
   font-family: 'Quicksand', sans-serif;
+  overflow-x: hidden;
+
 }
